--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/MockingbirdME/lotr-tcg-card-stats#readme",
   "dependencies": {
     "@ibm-cloud/cloudant": "^0.5.1",
+    "@json2csv/plainjs": "^7.0.1",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "ibm-cloud-sdk-core": "^4.0.8"
+    "ibm-cloud-sdk-core": "^4.0.8",
+    "json2csv": "^6.0.0-alpha.2"
   }
 }
