--- a/package.json
+++ b/package.json
@@ -26,5 +26,13 @@
     "express": "^4.18.2",
     "ibm-cloud-sdk-core": "^4.0.8",
     "json2csv": "^6.0.0-alpha.2"
+  },
+  "devDependencies": {
+    "@stylistic/eslint-plugin-js": "1.5.1",
+    "eslint": "8.56.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-mocha": "10.2.0",
+    "eslint-plugin-n": "16.4.0",
+    "eslint-plugin-promise": "6.1.1"
   }
 }
